--- a/index.html
+++ b/index.html
@@ -4,8 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temparature Converter</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   
+
+    <section class="bg-black text-white">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-12">
+                    <h1>Temparature Converter</h1>
+                </div>   
+                
+                <div class="col-12">
+                    <div class="mt-5 ">
+                        <label class="celcius" >Celcius: </label>
+                        <input class="imask input-one text-center " data-is-regex="true" data-mask="^[0-9]*$" maxlength="3" id="height"
+                            type="text" step="1" placeholder="Enter Temperature">
+                    </div>
+
+                    <div class="mt-5 ">
+                        <label class="fahrenheit">Fahrenheit:  </label>
+                        <input class="imask input-two text-center " data-is-regex="true" data-mask="^[0-9]*$" maxlength="3" id="height"
+                            type="text" step="1" placeholder="Enter Temperature">
+                    </div>
+
+                    <div class="mt-5 ">
+                        <label class="kelvin" >Kelvin:  </label>
+                        <input class="imask input-three text-center " data-is-regex="true" data-mask="^[0-9]*$" maxlength="3" id="height"
+                            type="text" step="1" placeholder="Enter Temperature">
+                    </div>
+
+                </div>
+            </div>
+            </div>
+        </div>
+    </section>
     
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 </body>
 </html>
