--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    
 
-    <section class="bg-black text-white">
+    <section class=" text-white">
         <div class="container text-center">
             <div class="row">
                 <div class="col-12">
@@ -20,19 +20,19 @@
                 <div class="col-12">
                     <div class="mt-5 ">
                         <label class="celcius" >Celcius: </label>
-                        <input class="imask input-one text-center " data-is-regex="true" data-mask="^[0-9]*$" maxlength="3" id="height"
+                        <input class=" input-one text-center "  id="celcius"
                             type="text" step="1" placeholder="Enter Temperature">
                     </div>
 
                     <div class="mt-5 ">
                         <label class="fahrenheit">Fahrenheit:  </label>
-                        <input class="imask input-two text-center " data-is-regex="true" data-mask="^[0-9]*$" maxlength="3" id="height"
+                        <input class=" input-two text-center "  id="fahrenheit"
                             type="text" step="1" placeholder="Enter Temperature">
                     </div>
 
                     <div class="mt-5 ">
                         <label class="kelvin" >Kelvin:  </label>
-                        <input class="imask input-three text-center " data-is-regex="true" data-mask="^[0-9]*$" maxlength="3" id="height"
+                        <input class=" input-three text-center "   id="kelvin"
                             type="text" step="1" placeholder="Enter Temperature">
                     </div>
 
