--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body >
    
 
     <section class=" text-white">
@@ -21,19 +21,23 @@
                     <div class="mt-5 ">
                         <label class="celcius" >Celcius: </label>
                         <input class=" input-one text-center "  id="celcius"
-                            type="text" step="1" placeholder="Enter Temperature">
+                            type="number" step="1" placeholder="Enter Temperature">
                     </div>
 
                     <div class="mt-5 ">
                         <label class="fahrenheit">Fahrenheit:  </label>
                         <input class=" input-two text-center "  id="fahrenheit"
-                            type="text" step="1" placeholder="Enter Temperature">
+                            type="number" step="1" placeholder="Enter Temperature">
                     </div>
 
                     <div class="mt-5 ">
                         <label class="kelvin" >Kelvin:  </label>
                         <input class=" input-three text-center "   id="kelvin"
-                            type="text" step="1" placeholder="Enter Temperature">
+                            type="number" step="1" placeholder="Enter Temperature">
+                    </div>
+
+                    <div>
+                        <button onclick="calculate()">click</button>
                     </div>
 
                 </div>
@@ -42,7 +46,7 @@
         </div>
     </section>
     
-
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
