--- a/index.html
+++ b/index.html
@@ -14,24 +14,54 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-12">
-                    <h1>Temparature Converter</h1>
+
+                    <video id="fire-video" muted playsinline>
+                        <source src="video.mp4" type="video/mp4">
+                    </video>
+                    <!-- <h1>Temparature Converter</h1> autoplay -->
+                    <div class="fire-anim">
+                        <span class="fire">T</span>
+                        <span class="burn">e</span>
+                        <span class="burn">m</span>
+                        <span class="burn">p</span>                        
+                        <span class="burn">a</span>
+                        <span class="burn">r</span>
+                        <span class="burn">a</span>
+                        <span class="burn">t</span>                       
+                        <span class="burn">u</span>
+                        <span class="burn">r</span>
+                        <span class="burn">e</span>
+                        <br>
+                        <span class="fire">C</span>
+                        <span class="burn">o</span>
+                        <span class="burn">n</span>
+                        <span class="burn">v</span>
+                        <span class="burn">e</span>
+                        <span class="burn">r</span>
+                        <span class="burn">t</span>
+                        <span class="burn">e</span>
+                        <span class="burn">r</span>
+                        
+
+
+                    </div>
                 </div>   
                 
-                <div class="col-12">
-                    <div class="mt-5 ">
-                        <label class="celcius" >Celcius: </label>
+                <div class="col-12 ">
+                    <div class=" mt-5">
+                        <label class="celcius text-danger fw-bold " >Celcius: </label>
                         <input class=" input-one text-center "  id="celcius"
                             type="number" step="1" placeholder="Enter Temperature">
                     </div>
 
-                    <div class="mt-5 ">
-                        <label class="fahrenheit">Fahrenheit:  </label>
+                    <div class="mt-5 text-danger fw-bold ">
+                        <label class="fahrenheit ">Fahrenheit:  </label>
                         <input class=" input-two text-center "  id="fahrenheit"
                             type="number" step="1" placeholder="Enter Temperature">
                     </div>
 
-                    <div class="mt-5 ">
-                        <label class="kelvin" >Kelvin:  </label>
+                    <div class=" mt-5 text-danger fw-bold ">
+                        <label class="kelvin " >Kelvin:  </label>
                         <input class=" input-three text-center "   id="kelvin"
                             type="number" step="1" placeholder="Enter Temperature">
                     </div>
